--- a/src/main/resources/static/css/user/myinfo.css
+++ b/src/main/resources/static/css/user/myinfo.css
@@ -50,7 +50,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-
     padding: 1rem 1rem 1rem 5rem;
 }
 
@@ -60,6 +59,7 @@
 
 .user-container > .user-right > .information-info-container {
     margin-top: 5rem;
-    height: 500px;
+    min-height: 500px;
+    max-height: 1000px;
     border: 0.0625rem solid black;
 }
