--- a/src/main/resources/templates/admin/inquiry.html
+++ b/src/main/resources/templates/admin/inquiry.html
@@ -31,12 +31,111 @@
                 <div class="title-container">
                     <h1 class="title">문의 사항 > 문의 내역</h1>
                 </div>
-                <div class="inquiry-container">
-                    <span class="text">문의사항 테이블 공간(문의사항 table에서 데이터 가져와서 게시판 형식으로 나열. 답글 다는 방식으로 만들 예정)</span>
+                    <div id="main_wrapper">
+                        <form method="get" th:action="@{/admin/inquiry}">
+                            <div class="search">
+                                <select name="type" class="form-select">
+                                    <option value='T'>제목별</option>
+                                    <option value='C'>내용</option>
+                                    <option value='W'>작성자별</option>
+                                    <option value="H">호텔이름별</option>
+                                    <option value="Q">질문유형별</option>
+                                </select>
+                                <label for="searchText"></label>
+                                <input type="text" id="searchText" class="form-control" name="keyword" placeholder="검색">
+                                <button type="submit" class="btn btn-secondary">검색</button>
+                            </div>
+                        </form>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                            <tr>
+                                <th>글제목</th>
+                                <th>호텔이름</th>
+                                <th>질문유형</th>
+                                <th>작성자</th>
+                                <th>작성일</th>
+                                <th>댓글작성여부</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <!-- 댓글 !-->
+                            <tr th:each="board : ${boardList}">
+                                <td>
+                                    <a th:href="@{'/board/admin/' + ${board.id}}">
+                                        <span th:text="${board.title}"></span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <span th:text="${board.hotelname}"></span>
+                                </td>
+                                <td>
+                                    <span th:text="${board.relation}"></span>
+                                </td>
+                                <td>
+                                    <span th:text="${board.username}"></span>
+                                </td>
+                                <td>
+                                    <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                </td>
+                                <td>
+                                    <th:block th:each="comment: ${commentList}">
+                                        <th:block th:if="${comment.board.id} == ${board.id}">
+                                            <button>답변완료</button>
+                                        </th:block>
+                                    </th:block>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div th:if="${!boardList.isEmpty()}">
+                            <ul class="pagination" style="justify-content: center"
+                                th:with="
+            pageNumber = ${boardList.pageable.pageNumber},
+            pageSize = ${boardList.pageable.pageSize},
+            totalPages = ${boardList.totalPages},
+            startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},
+            tempEndPage = ${startPage + pageSize - 1},
+            endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})">
+
+                                <li th:classappend="${boardList.first} ? 'disabled'" class="page-item">
+                                    <a class="page-link" th:if="${param.keyword == null}"
+                                       th:href="${boardList.first} ? '#' : @{/admin/inquiry(page=${pageNumber - 1})}"
+                                       aria-label="Previous">
+                                        <span aria-hidden="true">&lt;</span>
+                                    </a>
+                                    <a class="page-link" th:if="${param.keyword != null}"
+                                       th:href="${boardList.first} ? '#' : @{/admin/inquiry(page=${pageNumber - 1}, type=${param.type}, keyword=${param.keyword})}"
+                                       aria-label="Previous">
+                                        <span aria-hidden="true">&lt;</span>
+                                    </a>
+                                </li>
+
+                                <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
+                                    th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                                    <a th:text="${page}" th:if="${param.keyword == null}" class="page-link"
+                                       th:href="@{/admin/inquiry(page=${page - 1})}"></a>
+                                    <a th:text="${page}" th:if="${param.keyword != null}" class="page-link"
+                                       th:href="@{/admin/inquiry(page=${page - 1}, type=${param.type}, keyword=${param.keyword})}"></a>
+                                </li>
+
+                                <li th:classappend="${boardList.last} ? 'disabled'" class="page-item">
+                                    <a class="page-link" th:if="${param.keyword == null}"
+                                       th:href="${boardList.last} ? '#' : @{/admin/inquiry(page=${pageNumber + 1})}"
+                                       aria-label="Next">
+                                        <span aria-hidden="true">&gt;</span>
+                                    </a>
+                                    <a class="page-link" th:if="${param.keyword != null}"
+                                       th:href="${boardList.last} ? '#' : @{/admin/inquiry(page=${pageNumber + 1}, type=${param.type}, keyword=${param.keyword})}"
+                                       aria-label="Next">
+                                        <span aria-hidden="true">&gt;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </main>
 
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
