--- a/src/main/resources/static/css/admin/monthSales.css
+++ b/src/main/resources/static/css/admin/monthSales.css
@@ -7,19 +7,50 @@
     flex-direction: column;
 }
 
-.option {
-    max-width: 100%;
-    max-height: 100%;
-    font-size: 1rem;
-    position: absolute;
-    border: none;
-}
-
 #salesGraph {
     margin: 3rem;
 }
 
 .category-container {
+    z-index: 1;
+    position: absolute;
+}
+
+.category-btn {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: black;
+}
+
+ul {
+    box-shadow: 0 0 0.1rem 0.0625rem #17202a50;
+    background-color: white;
+}
+
+.row-container {
     display: flex;
     flex-direction: row;
 }
+
+.category ul:first-child {
+    width: 150px;
+}
+
+.category ul:first-child li {
+    margin-bottom: 0.3rem;
+}
+
+.category ul:not(:first-child) {
+    width: 300px;
+}
+
+.category ul:not(:first-child) li {
+    margin-bottom: 0.3rem;
+}
+
+.region {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
