--- a/src/main/resources/templates/admin/registerHotel.html
+++ b/src/main/resources/templates/admin/registerHotel.html
@@ -33,14 +33,30 @@
                 </div>
                 <div class="register-hotel-container">
                     <section class="hotel_img_block">
-                        <div class="hotel_img">
-                            <div class="upload-box">
-                                <div class="plus">+</div>
+                        <div class="main-image-container">
+                            <span class="text">대표 이미지</span>
+                            <div class="main-img">
+                                <div class="upload-box main-upload-box" >
+                                    <div class="plus">+</div>
+                                </div>
+                            </div>
+                            <div class="preview_img_block">
+                                <label>PREVIEW</label>
+                                <ul class="preview" id="mainPreview"></ul>
                             </div>
                         </div>
-                        <div class="preview_img_block">
-                            <label>PREVIEW</label>
-                            <ul id="preview"></ul>
+
+                        <div class="hotel-image-container">
+                            <span class="text hotel-image">호텔 이미지</span>
+                            <div class="hotel-img">
+                                <div class="upload-box hotel-upload-box">
+                                    <div class="plus">+</div>
+                                </div>
+                            </div>
+                            <div class="preview_img_block">
+                                <label>PREVIEW</label>
+                                <ul class="preview" id="hotelPreview"></ul>
+                            </div>
                         </div>
                     </section>
 
