--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -15,12 +15,10 @@
     </div>
     <div class="menu">
         <div class="subtitle-container">
-            <h2 class="subtitle">예약 현황</h2>
+            <h2 class="subtitle">예약</h2>
         </div>
         <div class="link-container">
-            <a href="/admin/reservationStatus?region=seoul" class="link">서울</a>
-            <a href="/admin/reservationStatus?region=busan" class="link">부산</a>
-            <a href="/admin/reservationStatus?region=ulsan" class="link">울산</a>
+            <a href="/admin/reservationStatus" class="link">예약 현황</a>
         </div>
         <div class="subtitle-container">
             <h2 class="subtitle">문의 사항</h2>
@@ -44,7 +42,6 @@
         </div>
         <div class="link-container">
             <a href="/admin/monthSales?region=total" class="link">월별 매출</a>
-            <a href="/admin/regionSales" class="link">지역별 매출</a>
         </div>
     </div>
 </div>
