--- a/src/main/resources/static/css/admin/modifyHotel.css
+++ b/src/main/resources/static/css/admin/modifyHotel.css
@@ -3,11 +3,6 @@
     flex-direction: row;
 }
 
-#regionList {
-    margin-left: 0.5rem;
-    width: 120px;
-}
-
 .search-addr-btn {
     margin-left: 0.5rem;
     width: 200px;
@@ -65,11 +60,13 @@
 }
 
 .preview_img_block{
-    position:relative;
-    top : 10px;
+    width: 100%;
+    position: relative;
+    top: 10px;
+    margin-bottom: 4rem;
 }
 
-#preview {
+.preview {
     width : 100%;
     height : 200px;
     margin: 10px auto;
