--- a/src/main/resources/static/css/admin/monthSales.css
+++ b/src/main/resources/static/css/admin/monthSales.css
@@ -1,3 +1,8 @@
+.admin-right > .title-container > .title {
+    display: flex;
+    flex-direction: row;
+}
+
 .sales-container {
     margin-top: 5rem;
     max-height: 100%;
