--- a/src/main/resources/templates/admin/reservationStatus.html
+++ b/src/main/resources/templates/admin/reservationStatus.html
@@ -29,17 +29,35 @@
             <th:block th:replace="~{fragments/adminLeft.html :: adminLeft_fragment}"></th:block>
             <div class="admin-right">
                 <div class="title-container">
-                    <h1 class="title">예약 현황 >
-                        <th:block th:switch="${region}">
-                            <span class="text" th:case='seoul'>서울</span>
-                            <span class="text" th:case='busan'>부산</span>
-                            <span class="text" th:case='ulsan'>울산</span>
-                        </th:block>
-                    </h1>
+                    <h1 class="title">예약 > 예약 현황</h1>
                 </div>
-                <div class="reservation-table-container">
-                    <span class="text">예약 테이블 공간(reservation table에서 데이터 가져와서 게시판 형식으로 나열. 취소 버튼을 만들어서 예약 및 결제 취소 되도록 할 예정)</span>
-                </div>
+                <table class="reservationList-table">
+                    <thead>
+                    <tr>
+                        <th>예약자 성함</th>
+                        <th>호텔</th>
+                        <th>객실 종류</th>
+                        <th>체크인</th>
+                        <th>체크 아웃</th>
+                        <th>예약 상태</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="empty" th:if="${reservationList.size() == 0}">
+                        <td colspan="5">예약이 존재하지 않습니다.</td>
+                    </tr>
+                    <tr th:each="reservation : ${reservationList}">
+                        <td th:text="${reservation.user.name}"></td>
+                        <td th:text="${reservation.room.hotel.hotelName}"></td>
+                        <td th:text="${reservation.room.kind}"></td>
+                        <td th:text="${reservation.checkin}"></td>
+                        <td th:text="${reservation.checkout}"></td>
+                        <td th:text="${reservation.status}"></td>
+                        <td>예약 취소 버튼</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
