--- a/src/main/resources/templates/admin/modifyHotel.html
+++ b/src/main/resources/templates/admin/modifyHotel.html
@@ -59,7 +59,7 @@
                                     <label>PREVIEW</label>
                                     <ul class="preview" id="mainPreview">
                                         <li class="item">
-                                            <input hidden type="text" class="existing-file-name" name="existingFileName" th:value="${hotelMainFile.fileName}">
+                                            <input hidden type="text" class="existing-file-name existing-main-file-name" name="existingMainFileName" th:value="${hotelMainFile.fileName}">
                                             <img class="img" th:src="@{${hotelMainFile.dir} + ${hotelMainFile.fileName}}" alt="">
                                             <a class="btn btn-secondary delete-btn">삭제</a>
                                         </li>
