--- a/src/main/resources/templates/user/reservationInfo.html
+++ b/src/main/resources/templates/user/reservationInfo.html
@@ -13,6 +13,7 @@
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/user/myinfo.css">
+    <link rel="stylesheet" href="/css/user/reservationinfo.css">
 
     <!-- js -->
 </head>
@@ -33,11 +34,37 @@
                     <h1 class="tag" th:case='update'>예약변경</h1>
                     <h1 class="tag" th:case='delete'>예약취소</h1>
                 </div>
-                <div class="information-info-container">
-                    <th:block th:switch="${function}">
-                        <span class="text" th:case='read'>예약목록</span>
-                        <span class="text" th:case='update'>예약변경</span>
-                        <span class="text" th:case='delete'>예약취소</span>
+                <div class="information-info-container" th:switch="${function}">
+                    <th:block th:case='read'>
+                        <div class="reservation-content-container">
+                            <table class="reservationList-table">
+                                <thead>
+                                <tr>
+                                    <th>예약자 성함</th>
+                                    <th>호텔</th>
+                                    <th>객실 종류</th>
+                                    <th>체크인</th>
+                                    <th>체크 아웃</th>
+                                    <th>예약 상태</th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="empty" th:if="${reservationList.size() == 0}">
+                                    <td colspan="5">예약이 존재하지 않습니다.</td>
+                                </tr>
+                                <tr th:each="reservation : ${reservationList}">
+                                    <td th:text="${reservation.user.name}"></td>
+                                    <td th:text="${reservation.room.hotel.hotelName}"></td>
+                                    <td th:text="${reservation.room.kind}"></td>
+                                    <td th:text="${reservation.checkin}"></td>
+                                    <td th:text="${reservation.checkout}"></td>
+                                    <td th:text="${reservation.status}"></td>
+                                    <td>예약 취소 버튼</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </th:block>
                 </div>
             </div>
