--- a/src/main/resources/static/css/admin/reservationStatus.css
+++ b/src/main/resources/static/css/admin/reservationStatus.css
@@ -16,3 +16,13 @@
     background-color: #F9F8F8;
     border-radius: 5px;
 }
+.page-link {
+    border: unset!important;
+}
+.page-item.active > .page-link{
+    background-color: rgb(32, 150, 243)!important;
+}
+
+.page-link > span {
+    font-weight: bold;
+}
