--- a/src/main/resources/static/css/board/admin/list.css
+++ b/src/main/resources/static/css/board/admin/list.css
@@ -33,3 +33,14 @@
     align-items: center;
     justify-content: center;
 }
+
+.page-link {
+    border: unset!important;
+}
+.page-item.active > .page-link{
+    background-color: rgb(32, 150, 243)!important;
+}
+
+.page-link > span {
+    font-weight: bold;
+}
