전체 구조 수정 02-03

--- a/src/main/resources/templates/admin/detail.html
+++ b/src/main/resources/templates/admin/detail.html
@@ -75,9 +75,9 @@
             </div>
         </div>
         <div class="comment_admin card my-4" th:if="${comments.isEmpty()}">
-            <h5 class="card-header">답글 쓰기</h5>
+            <h5 class="card-header">답변 쓰기</h5>
             <div class="card-body">
-                <form th:action="@{/board/{id}/comment(id=${id})}" th:method="post">
+                <form th:action="@{/{id}/comment(id=${id})}" th:method="post">
                     <div class="form-group" style="margin-bottom: 10px;">
                         <input type="hidden" name="idx" th:value="*{idx}"/>
                         <textarea name="content" class="form-control" rows="3"></textarea>
@@ -94,17 +94,17 @@
                     <div class="media mb-4">
                         <div class="media-body">
                             <h5 class="mt-0" th:text="${comment.username}">작성자</h5>
-                            <p th:text="${comment.content}" th:id="'comment-' + ${comment.id}">댓글 내용</p>
+                            <p th:text="${comment.content}" th:id="'comment-' + ${comment.id}">답변 내용</p>
                             <small class="text-muted"
-                                   th:text="${#temporals.format(comment.createdTime, 'yyyy-MM-dd HH:mm')}">댓글 작성
+                                   th:text="${#temporals.format(comment.createdTime, 'yyyy-MM-dd HH:mm')}">답변 작성
                                 시간</small>
                             <div>
-                                <button class="btn btn-sm btn-outline-warning" th:attr="data-id=${comment.id}"
+                                <button class="btn btn-sm btn-outline-warning" th:attr="data-comment_id=${comment.id}, data-board_id=${board.id}"
                                         onclick="editComment(this)">수정
                                 </button>
                                 <a th:href="@{/board/{id}/comment/{commentId}/remove(id=${id}, commentId=${comment.id})}"
                                    class="btn btn-sm btn-outline-danger"
-                                   onclick="return confirm('Delete this comment?')">삭제</a>
+                                   onclick="return confirm('답변을 삭제하시겠습니까?')">삭제</a>
                             </div>
                         </div>
                     </div>
@@ -114,8 +114,9 @@
 
         <button class="btn btn-outline-secondary" onclick="listReq()">게시판 목록</button>
         <th:block>
-            <a th:href="@{/board/{id}/admin/adminRemove(id=${id})}" class="btn btn-outline-danger"
-               onclick="return confirm('삭제하시겠습니까?')">회원 글 삭제</a>
+
+            <a th:href="@{/board/admin/{id}/adminRemove(id=${id})}" class="btn btn-outline-danger"
+               onclick="return confirm('글을 삭제하시겠습니까?')">회원 글 삭제</a>
         </th:block>
     </div>
 </main>
