--- a/src/main/resources/templates/admin/questionWrite.html
+++ b/src/main/resources/templates/admin/questionWrite.html
@@ -16,7 +16,7 @@
 </header>
 <main id="main">
     <div id="main_wrapper">
-        <form id="mainForm" action="/board/write" method="post">
+        <form id="mainForm" method="post">
             <div>
                 <label class="form-label fw-bold fs-5">제목</label>
                 <input class="form-control" type="text" name="title" required>
