--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,7 +38,7 @@
             <div class="hotelArea">
                 <a class="link" href="/hotel/find">호텔 찾기</a>
                 <a class="link" href="/hotel/info">호텔 소개</a>
-                <a class="link" href="#" sec:authorize="hasRole('ROLE_USER') || isAnonymous()">고객 문의</a>
+                <a class="link" href="/board/question" sec:authorize="hasRole('ROLE_USER') || isAnonymous()">고객 문의</a>
             </div>
         </div>
     </div>
