--- a/src/main/resources/static/css/user/myinfo.css
+++ b/src/main/resources/static/css/user/myinfo.css
@@ -63,3 +63,15 @@
     max-height: 1000px;
     border: 0.0625rem solid black;
 }
+
+.page-link {
+    border: unset!important;
+}
+.page-item.active > .page-link{
+    background-color: rgb(32, 150, 243)!important;
+}
+
+.page-link > span {
+    font-weight: bold;
+    color: gray;
+}
