--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -21,10 +21,16 @@
             <a href="/admin/reservationStatus" class="link">예약 현황</a>
         </div>
         <div class="subtitle-container">
-            <h2 class="subtitle">문의 사항</h2>
+            <h2 class="subtitle">고객문의</h2>
         </div>
         <div class="link-container">
-            <a href="/admin/inquiry" class="link">문의 내역</a>
+            <a href="/admin/questionWrite" class="link">자주하는 질문 작성</a>
+        </div>
+        <div class="link-container">
+            <a href="#" class="link">공지사항 작성</a>
+        </div>
+        <div class="link-container">
+            <a href="/admin/inquiryList" class="link">1:1 문의 내역</a>
         </div>
         <div class="subtitle-container">
             <h2 class="subtitle">호텔 관리</h2>
