--- a/src/main/resources/templates/fragments/userLeft.html
+++ b/src/main/resources/templates/fragments/userLeft.html
@@ -34,8 +34,7 @@
             <h2 class="subtitle">문의사항</h2>
         </div>
         <div class="link-container">
-            <a href="/user/questionInfo?function=create" class="link">문의하기</a>
-            <a href="/user/questionInfo?function=read" class="link">문의현황</a>
+            <a href="/user/questionInfo?function=read" class="link">문의내역</a>
         </div>
     </div>
 </div>
