--- a/src/main/resources/templates/user/questionInfo.html
+++ b/src/main/resources/templates/user/questionInfo.html
@@ -29,7 +29,7 @@
             <th:block th:replace="~{fragments/userLeft.html :: userLeft_fragment}"></th:block>
             <div class="user-right">
                 <div class="title-container" th:switch="${function}">
-                    <h1 class="title">문의사항 > 문의내역</h1>
+                    <h1 class="title">문의사항 > 1:1 문의내역</h1>
                 </div>
                 <div class="information-info-container">
                     <th:block th:switch="${function}">
