--- a/src/main/resources/templates/admin/questionWrite.html
+++ b/src/main/resources/templates/admin/questionWrite.html
@@ -1,37 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 
-    <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
+    <!--  cdns  -->
+    <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 
+    <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/board/write.css">
+
+    <!-- js -->
+    <script defer src="/js/admin/inquiry.js"></script>
 </head>
 <body>
 
 <header id="header" class="content-container-wrapper">
     <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
 </header>
-<main id="main">
-    <div id="main_wrapper">
-        <form id="mainForm" method="post">
-            <div>
-                <label class="form-label fw-bold fs-5">제목</label>
-                <input class="form-control" type="text" name="title" required>
-            </div>
-            <div class="mb-3">
-                <label class="form-label fw-bold fs-5">내용</label>
-                <textarea class="form-control" name="content" cols="30" rows="10" required></textarea>
-            </div>
-            <span class="mb-3">
+
+<main id="main" class="content-container-wrapper">
+    <div class="content-container">
+        <div class="admin-container">
+            <th:block th:replace="~{fragments/adminLeft.html :: adminLeft_fragment}"></th:block>
+            <div class="admin-right">
+                <div class="title-container">
+                    <h1 class="title">고객문의 > 자주하는 질문 작성</h1>
+                </div>
+                <div id="main_wrapper">
+                    <form id="mainForm" method="post">
+                        <div>
+                            <label class="form-label fw-bold fs-5">제목</label>
+                            <input class="form-control" type="text" name="title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label fw-bold fs-5">내용</label>
+                            <textarea class="form-control" name="content" cols="30" rows="10" required></textarea>
+                        </div>
+                        <span class="mb-3">
         <input class="form-control write" type="submit" value="글작성">
     </span>
-        </form>
-        <span class="button mt-3">
+                    </form>
+                    <span class="button mt-3">
     <button class="btn btn-primary mb-3" onclick="listReq()">목록</button>
 </span>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
