--- a/src/main/resources/templates/board/questionDetail.html
+++ b/src/main/resources/templates/board/questionDetail.html
@@ -49,9 +49,9 @@
 
                         <th:block
                                 th:if="${board != null and #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and board.getUserid() == #authentication.principal.username}">
-                            <a th:href="@{/board/{id}/update(id=${id})}" class="btn btn-outline-warning">수정</a>
-                            <a th:href="@{/board/{id}/remove(id=${id})}" class="btn btn-outline-danger"
-                               onclick="return alert('삭제하시겠습니까?')">삭제</a>
+                            <a th:href="@{/board/question/{id}/update(id=${id})}" class="btn btn-outline-warning">수정</a>
+                            <a th:href="@{/board/question/{id}/remove(id=${id})}" class="btn btn-outline-danger"
+                               onclick="return confirm('삭제하시겠습니까?')">삭제</a>
                         </th:block>
                     </div>
                 </form>
