--- a/src/main/resources/templates/fragments/userLeft.html
+++ b/src/main/resources/templates/fragments/userLeft.html
@@ -34,10 +34,9 @@
             <h2 class="subtitle">문의사항</h2>
         </div>
         <div class="link-container">
-            <a href="/user/questionInfo?function=read" class="link">문의내역</a>
+            <a href="/user/questionInfo?function=read" class="link">1:1 문의내역</a>
         </div>
     </div>
 </div>
-
 </body>
 </html>
