--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -10,7 +10,9 @@
 <body>
 
 <div class="admin-left" th:fragment="adminLeft_fragment">
-    <h1 class="title">관리자 페이지</h1>
+    <div class="title-container">
+        <h1 class="title">관리자 페이지</h1>
+    </div>
     <ul>
         <li>
             <h2>예약</h2>
