--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -409,7 +409,7 @@ button {
     margin-top: 0.5rem;
 }
 
-.admin-container .title {
+.admin-container .title-container {
     border-bottom: 0.3rem solid #4a4a4a;
 }
 
