--- a/src/main/resources/static/css/payment/read.css
+++ b/src/main/resources/static/css/payment/read.css
@@ -13,7 +13,7 @@
 }
 
 
-.title-container > .title {
+.title {
     text-align: center;
     margin: 4rem 0 2rem 0;
     font-size: 2.25rem;
@@ -30,7 +30,7 @@
     margin-bottom: 2rem;
 }
 
-.step-container > .step {
+.step {
     width: 1.75rem;
     height: 1.75rem;
 
@@ -44,12 +44,12 @@
     justify-content: center;
 }
 
-.step-container > .step:nth-child(3) {
+.step:nth-child(3) {
     color: #ffffff;
     background-color: #AD9E87;
 }
 
-.step-container > .line {
+.line {
     width: 2rem;
     height: 0;
     border: 0.0625rem solid #AD9E87;
@@ -64,37 +64,37 @@
     margin-top: 2.5rem;
 }
 
-.confirmation-payment-container > .confirmation-container {
+.confirmation-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.confirmation-payment-container > .confirmation-container > .image-container {
+.image-container {
     overflow: hidden;
     height: 300px;
 }
 
-.confirmation-payment-container > .confirmation-container > .image-container img {
+.image-container img {
     width: 550px;
 }
 
-.confirmation-payment-container > .confirmation-container > .info {
+.info {
     width: 600px;
     border-bottom: #9c9c9c 0.0625rem solid;
 }
 
-.confirmation-payment-container > .confirmation-container > .info .bold {
+.info .bold {
     display: inline-block;
     width: 10rem;
     font-weight: 500;
 }
 
-.confirmation-payment-container > .confirmation-container > .info li {
+.info li {
     margin-bottom: 1rem;
 }
 
-.confirmation-payment-container > .payment-container {
+.payment-container {
     margin: 3rem 0;
 
     display: flex;
@@ -102,18 +102,18 @@
     justify-content: space-between;
 }
 
-.confirmation-payment-container > .payment-container .subtitle {
+.subtitle {
     font-weight: 500;
     font-size: 1.25rem;
 }
 
-.confirmation-payment-container > .payment-container > .payment-left {
+.payment-left {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.confirmation-payment-container > .payment-container > .payment-left > .user-info {
+.user-info {
     border: 0.0625rem solid #9c9c9c;
     margin-top: 1.25rem;
     margin-bottom: 3rem;
@@ -121,7 +121,7 @@
     height: 200px;
 }
 
-.confirmation-payment-container > .payment-container > .payment-left > .pay-method-container {
+.pay-method-container {
     padding: 1.25rem;
     border: 0.0625rem solid #9c9c9c;
     margin-top: 1.25rem;
@@ -129,14 +129,14 @@
     height: 200px;
 }
 
-.confirmation-payment-container > .payment-container > .payment-right > .price-container {
+.price-container {
     border: 0.0625rem solid #9c9c9c;
     margin-top: 1.25rem;
     width: 300px;
     height: 400px;
 }
 
-.confirmation-payment-container > .payment-container > .payment-right > .price-container > .pay-button {
+.pay-button {
     width: 80px;
     height: 50px;
     background-color: #9c9c9c;
