--- a/src/main/resources/templates/hotel/info.html
+++ b/src/main/resources/templates/hotel/info.html
@@ -30,9 +30,8 @@
                 <div class="menu">
                     <div class="link-container">
                         <a href="#" class="link">소개</a>
-                        <a href="#" class="link">서울</a>
-                        <a href="#" class="link">부산</a>
-                        <a href="#" class="link">울산</a>
+                        <a href="#" class="link">연혁</a>
+                        <a href="#" class="link">수상이력</a>
                     </div>
                 </div>
             </div>
